// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/input/demo/addon.md correctly 1`] = `
<div>
  <div
    style="margin-bottom:16px"
  >
    <span
      class="ant-input-group-wrapper"
    >
      <span
        class="ant-input-wrapper ant-input-group"
      >
        <span
          class="ant-input-group-addon"
        >
          Http://
        </span>
        <input
          class="ant-input"
          type="text"
          value="mysite"
        />
        <span
          class="ant-input-group-addon"
        >
          .com
        </span>
      </span>
    </span>
  </div>
  <div
    style="margin-bottom:16px"
  >
    <span
      class="ant-input-group-wrapper"
    >
      <span
        class="ant-input-wrapper ant-input-group"
      >
        <span
          class="ant-input-group-addon"
        >
          <div
            class="ant-select ant-select-enabled"
            style="width:90px"
          >
            <div
              aria-autocomplete="list"
              aria-controls=""
              aria-expanded="false"
              aria-haspopup="true"
              class="ant-select-selection
            ant-select-selection--single"
              role="combobox"
              tabindex="0"
            >
              <div
                class="ant-select-selection__rendered"
              >
                <div
                  class="ant-select-selection-selected-value"
                  style="display:block;opacity:1"
                  title="Http://"
                >
                  Http://
                </div>
              </div>
              <span
                class="ant-select-arrow"
                style="user-select:none;-webkit-user-select:none"
                unselectable="on"
              >
                <i
                  aria-label="icon: down"
                  class="anticon anticon-down ant-select-arrow-icon"
                >
                  <svg
                    aria-hidden="true"
                    class=""
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    width="1em"
                  >
                    <use
                      href="#down"
                    />
                  </svg>
                </i>
              </span>
            </div>
          </div>
        </span>
        <input
          class="ant-input"
          type="text"
          value="mysite"
        />
        <span
          class="ant-input-group-addon"
        >
          <div
            class="ant-select ant-select-enabled"
            style="width:80px"
          >
            <div
              aria-autocomplete="list"
              aria-controls=""
              aria-expanded="false"
              aria-haspopup="true"
              class="ant-select-selection
            ant-select-selection--single"
              role="combobox"
              tabindex="0"
            >
              <div
                class="ant-select-selection__rendered"
              >
                <div
                  class="ant-select-selection-selected-value"
                  style="display:block;opacity:1"
                  title=".com"
                >
                  .com
                </div>
              </div>
              <span
                class="ant-select-arrow"
                style="user-select:none;-webkit-user-select:none"
                unselectable="on"
              >
                <i
                  aria-label="icon: down"
                  class="anticon anticon-down ant-select-arrow-icon"
                >
                  <svg
                    aria-hidden="true"
                    class=""
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    width="1em"
                  >
                    <use
                      href="#down"
                    />
                  </svg>
                </i>
              </span>
            </div>
          </div>
        </span>
      </span>
    </span>
  </div>
  <div
    style="margin-bottom:16px"
  >
    <span
      class="ant-input-group-wrapper"
    >
      <span
        class="ant-input-wrapper ant-input-group"
      >
        <input
          class="ant-input"
          type="text"
          value="mysite"
        />
        <span
          class="ant-input-group-addon"
        >
          <i
            aria-label="icon: setting"
            class="anticon anticon-setting"
          >
            <svg
              aria-hidden="true"
              class=""
              fill="currentColor"
              focusable="false"
              height="1em"
              width="1em"
            >
              <use
                href="#setting"
              />
            </svg>
          </i>
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`renders ./components/input/demo/allowClear.md correctly 1`] = `
<span
  class="ant-input-affix-wrapper"
>
  <input
    class="ant-input"
    placeholder="input with clear icon"
    type="text"
    value=""
  />
  <span
    class="ant-input-suffix"
  />
</span>
`;

exports[`renders ./components/input/demo/autosize-textarea.md correctly 1`] = `
<div>
  <textarea
    class="ant-input"
    placeholder="Autosize height based on content lines"
  />
  <div
    style="margin:24px 0"
  />
  <textarea
    class="ant-input"
    placeholder="Autosize height with minimum and maximum number of lines"
  />
</div>
`;

exports[`renders ./components/input/demo/basic.md correctly 1`] = `
<input
  class="ant-input"
  placeholder="Basic usage"
  type="text"
  value=""
/>
`;

exports[`renders ./components/input/demo/group.md correctly 1`] = `
<div>
  <span
    class="ant-input-group ant-input-group-lg"
  >
    <div
      class="ant-col-5"
    >
      <input
        class="ant-input"
        type="text"
        value="0571"
      />
    </div>
    <div
      class="ant-col-8"
    >
      <input
        class="ant-input"
        type="text"
        value="26888888"
      />
    </div>
  </span>
  <br />
  <span
    class="ant-input-group ant-input-group-compact"
  >
    <input
      class="ant-input"
      style="width:20%"
      type="text"
      value="0571"
    />
    <input
      class="ant-input"
      style="width:30%"
      type="text"
      value="26888888"
    />
  </span>
  <br />
  <span
    class="ant-input-group ant-input-group-compact"
  >
    <div
      class="ant-select ant-select-enabled"
    >
      <div
        aria-autocomplete="list"
        aria-controls=""
        aria-expanded="false"
        aria-haspopup="true"
        class="ant-select-selection
            ant-select-selection--single"
        role="combobox"
        tabindex="0"
      >
        <div
          class="ant-select-selection__rendered"
        >
          <div
            class="ant-select-selection-selected-value"
            style="display:block;opacity:1"
            title="Zhejiang"
          >
            Zhejiang
          </div>
        </div>
        <span
          class="ant-select-arrow"
          style="user-select:none;-webkit-user-select:none"
          unselectable="on"
        >
          <i
            aria-label="icon: down"
            class="anticon anticon-down ant-select-arrow-icon"
          >
            <svg
              aria-hidden="true"
              class=""
              fill="currentColor"
              focusable="false"
              height="1em"
              width="1em"
            >
              <use
                href="#down"
              />
            </svg>
          </i>
        </span>
      </div>
    </div>
    <input
      class="ant-input"
      style="width:50%"
      type="text"
      value="Xihu District, Hangzhou"
    />
  </span>
  <br />
  <span
    class="ant-input-group ant-input-group-compact"
  >
    <div
      class="ant-select ant-select-enabled"
    >
      <div
        aria-autocomplete="list"
        aria-controls=""
        aria-expanded="false"
        aria-haspopup="true"
        class="ant-select-selection
            ant-select-selection--single"
        role="combobox"
        tabindex="0"
      >
        <div
          class="ant-select-selection__rendered"
        >
          <div
            class="ant-select-selection-selected-value"
            style="display:block;opacity:1"
            title="Option1"
          >
            Option1
          </div>
        </div>
        <span
          class="ant-select-arrow"
          style="user-select:none;-webkit-user-select:none"
          unselectable="on"
        >
          <i
            aria-label="icon: down"
            class="anticon anticon-down ant-select-arrow-icon"
          >
            <svg
              aria-hidden="true"
              class=""
              fill="currentColor"
              focusable="false"
              height="1em"
              width="1em"
            >
              <use
                href="#down"
              />
            </svg>
          </i>
        </span>
      </div>
    </div>
    <input
      class="ant-input"
      style="width:50%"
      type="text"
      value="input content"
    />
    <div
      class="ant-input-number"
    >
      <div
        class="ant-input-number-handler-wrap"
      >
        <span
          aria-disabled="false"
          aria-label="Increase Value"
          class="ant-input-number-handler ant-input-number-handler-up "
          role="button"
          unselectable="unselectable"
        >
          <i
            aria-label="icon: up"
            class="anticon anticon-up ant-input-number-handler-up-inner"
          >
            <svg
              aria-hidden="true"
              class=""
              fill="currentColor"
              focusable="false"
              height="1em"
              width="1em"
            >
              <use
                href="#up"
              />
            </svg>
          </i>
        </span>
        <span
          aria-disabled="false"
          aria-label="Decrease Value"
          class="ant-input-number-handler ant-input-number-handler-down "
          role="button"
          unselectable="unselectable"
        >
          <i
            aria-label="icon: down"
            class="anticon anticon-down ant-input-number-handler-down-inner"
          >
            <svg
              aria-hidden="true"
              class=""
              fill="currentColor"
              focusable="false"
              height="1em"
              width="1em"
            >
              <use
                href="#down"
              />
            </svg>
          </i>
        </span>
      </div>
      <div
        aria-valuemin="-9007199254740991"
        class="ant-input-number-input-wrap"
        role="spinbutton"
      >
        <input
          autocomplete="off"
          class="ant-input-number-input"
          min="-9007199254740991"
          step="1"
          value=""
        />
      </div>
    </div>
  </span>
  <br />
  <span
    class="ant-input-group ant-input-group-compact"
  >
    <input
      class="ant-input"
      style="width:50%"
      type="text"
      value="input content"
    />
    <span
      class="ant-calendar-picker"
    >
      <div>
        <input
          class="ant-calendar-picker-input ant-input"
          placeholder="Select date"
          readonly=""
          value=""
        />
        <i
          aria-label="icon: calendar"
          class="anticon anticon-calendar ant-calendar-picker-icon"
        >
          <svg
            aria-hidden="true"
            class=""
            fill="currentColor"
            focusable="false"
            height="1em"
            width="1em"
          >
            <use
              href="#calendar"
            />
          </svg>
        </i>
      </div>
    </span>
  </span>
  <br />
  <span
    class="ant-input-group ant-input-group-compact"
  >
    <div
      class="ant-select ant-select-enabled"
    >
      <div
        aria-autocomplete="list"
        aria-controls=""
        aria-expanded="false"
        aria-haspopup="true"
        class="ant-select-selection
            ant-select-selection--single"
        role="combobox"
        tabindex="0"
      >
        <div
          class="ant-select-selection__rendered"
        >
          <div
            class="ant-select-selection-selected-value"
            style="display:block;opacity:1"
            title="Option1-1"
          >
            Option1-1
          </div>
        </div>
        <span
          class="ant-select-arrow"
          style="user-select:none;-webkit-user-select:none"
          unselectable="on"
        >
          <i
            aria-label="icon: down"
            class="anticon anticon-down ant-select-arrow-icon"
          >
            <svg
              aria-hidden="true"
              class=""
              fill="currentColor"
              focusable="false"
              height="1em"
              width="1em"
            >
              <use
                href="#down"
              />
            </svg>
          </i>
        </span>
      </div>
    </div>
    <div
      class="ant-select ant-select-enabled"
    >
      <div
        aria-autocomplete="list"
        aria-controls=""
        aria-expanded="false"
        aria-haspopup="true"
        class="ant-select-selection
            ant-select-selection--single"
        role="combobox"
        tabindex="0"
      >
        <div
          class="ant-select-selection__rendered"
        >
          <div
            class="ant-select-selection-selected-value"
            style="display:block;opacity:1"
            title="Option2-2"
          >
            Option2-2
          </div>
        </div>
        <span
          class="ant-select-arrow"
          style="user-select:none;-webkit-user-select:none"
          unselectable="on"
        >
          <i
            aria-label="icon: down"
            class="anticon anticon-down ant-select-arrow-icon"
          >
            <svg
              aria-hidden="true"
              class=""
              fill="currentColor"
              focusable="false"
              height="1em"
              width="1em"
            >
              <use
                href="#down"
              />
            </svg>
          </i>
        </span>
      </div>
    </div>
  </span>
  <br />
  <span
    class="ant-input-group ant-input-group-compact"
  >
    <div
      class="ant-select ant-select-enabled"
    >
      <div
        aria-autocomplete="list"
        aria-controls=""
        aria-expanded="false"
        aria-haspopup="true"
        class="ant-select-selection
            ant-select-selection--single"
        role="combobox"
        tabindex="0"
      >
        <div
          class="ant-select-selection__rendered"
        >
          <div
            class="ant-select-selection-selected-value"
            style="display:block;opacity:1"
            title="Between"
          >
            Between
          </div>
        </div>
        <span
          class="ant-select-arrow"
          style="user-select:none;-webkit-user-select:none"
          unselectable="on"
        >
          <i
            aria-label="icon: down"
            class="anticon anticon-down ant-select-arrow-icon"
          >
            <svg
              aria-hidden="true"
              class=""
              fill="currentColor"
              focusable="false"
              height="1em"
              width="1em"
            >
              <use
                href="#down"
              />
            </svg>
          </i>
        </span>
      </div>
    </div>
    <input
      class="ant-input"
      placeholder="Minimum"
      style="width:100px;text-align:center"
      type="text"
      value=""
    />
    <input
      class="ant-input ant-input-disabled"
      disabled=""
      placeholder="~"
      style="width:30px;border-left:0;pointer-events:none;background-color:#fff"
      type="text"
      value=""
    />
    <input
      class="ant-input"
      placeholder="Maximum"
      style="width:100px;text-align:center;border-left:0"
      type="text"
      value=""
    />
  </span>
  <br />
  <span
    class="ant-input-group ant-input-group-compact"
  >
    <div
      class="ant-select ant-select-enabled"
    >
      <div
        aria-autocomplete="list"
        aria-controls=""
        aria-expanded="false"
        aria-haspopup="true"
        class="ant-select-selection
            ant-select-selection--single"
        role="combobox"
        tabindex="0"
      >
        <div
          class="ant-select-selection__rendered"
        >
          <div
            class="ant-select-selection-selected-value"
            style="display:block;opacity:1"
            title="Sign Up"
          >
            Sign Up
          </div>
        </div>
        <span
          class="ant-select-arrow"
          style="user-select:none;-webkit-user-select:none"
          unselectable="on"
        >
          <i
            aria-label="icon: down"
            class="anticon anticon-down ant-select-arrow-icon"
          >
            <svg
              aria-hidden="true"
              class=""
              fill="currentColor"
              focusable="false"
              height="1em"
              width="1em"
            >
              <use
                href="#down"
              />
            </svg>
          </i>
        </span>
      </div>
    </div>
    <div
      class="ant-select-show-search ant-select-auto-complete ant-select ant-select-combobox ant-select-enabled"
      style="width:200px"
    >
      <div
        aria-autocomplete="list"
        aria-controls=""
        aria-expanded="false"
        aria-haspopup="true"
        class="ant-select-selection
            ant-select-selection--single"
        role="combobox"
      >
        <div
          class="ant-select-selection__rendered"
        >
          <div
            class="ant-select-selection__placeholder"
            style="display:block;user-select:none;-webkit-user-select:none"
            unselectable="on"
          >
            Email
          </div>
          <ul>
            <li
              class="ant-select-search ant-select-search--inline"
            >
              <div
                class="ant-select-search__field__wrap"
              >
                <input
                  class="ant-input ant-select-search__field"
                  type="text"
                  value=""
                />
                <span
                  class="ant-select-search__field__mirror"
                >
                   
                </span>
              </div>
            </li>
          </ul>
        </div>
        <span
          class="ant-select-arrow"
          style="user-select:none;-webkit-user-select:none"
          unselectable="on"
        >
          <i
            aria-label="icon: down"
            class="anticon anticon-down ant-select-arrow-icon"
          >
            <svg
              aria-hidden="true"
              class=""
              fill="currentColor"
              focusable="false"
              height="1em"
              width="1em"
            >
              <use
                href="#down"
              />
            </svg>
          </i>
        </span>
      </div>
    </div>
  </span>
  <br />
  <span
    class="ant-input-group ant-input-group-compact"
  >
    <div
      class="ant-select ant-select-enabled"
      style="width:30%"
    >
      <div
        aria-autocomplete="list"
        aria-controls=""
        aria-expanded="false"
        aria-haspopup="true"
        class="ant-select-selection
            ant-select-selection--single"
        role="combobox"
        tabindex="0"
      >
        <div
          class="ant-select-selection__rendered"
        >
          <div
            class="ant-select-selection-selected-value"
            style="display:block;opacity:1"
            title="Home"
          >
            Home
          </div>
        </div>
        <span
          class="ant-select-arrow"
          style="user-select:none;-webkit-user-select:none"
          unselectable="on"
        >
          <i
            aria-label="icon: down"
            class="anticon anticon-down ant-select-arrow-icon"
          >
            <svg
              aria-hidden="true"
              class=""
              fill="currentColor"
              focusable="false"
              height="1em"
              width="1em"
            >
              <use
                href="#down"
              />
            </svg>
          </i>
        </span>
      </div>
    </div>
    <span
      class="ant-cascader-picker"
      style="width:70%"
      tabindex="0"
    >
      <span
        class="ant-cascader-picker-label"
      />
      <input
        autocomplete="off"
        class="ant-input ant-cascader-input "
        placeholder="Select Address"
        readonly=""
        type="text"
        value=""
      />
      <i
        aria-label="icon: down"
        class="anticon anticon-down ant-cascader-picker-arrow"
      >
        <svg
          aria-hidden="true"
          class=""
          fill="currentColor"
          focusable="false"
          height="1em"
          width="1em"
        >
          <use
            href="#down"
          />
        </svg>
      </i>
    </span>
  </span>
</div>
`;

exports[`renders ./components/input/demo/password-input.md correctly 1`] = `
<span
  class="ant-input-password ant-input-affix-wrapper"
>
  <input
    action="click"
    class="ant-input"
    placeholder="input password"
    type="password"
    value=""
  />
  <span
    class="ant-input-suffix"
  >
    <i
      aria-label="icon: eye"
      class="anticon anticon-eye ant-input-password-icon"
      tabindex="-1"
    >
      <svg
        aria-hidden="true"
        class=""
        fill="currentColor"
        focusable="false"
        height="1em"
        width="1em"
      >
        <use
          href="#eye"
        />
      </svg>
    </i>
  </span>
</span>
`;

exports[`renders ./components/input/demo/presuffix.md correctly 1`] = `
<span
  class="ant-input-affix-wrapper"
>
  <span
    class="ant-input-prefix"
  >
    <i
      aria-label="icon: user"
      class="anticon anticon-user"
      style="color:rgba(0,0,0,.25)"
    >
      <svg
        aria-hidden="true"
        class=""
        fill="currentColor"
        focusable="false"
        height="1em"
        width="1em"
      >
        <use
          href="#user"
        />
      </svg>
    </i>
  </span>
  <input
    class="ant-input"
    placeholder="Enter your username"
    type="text"
    value=""
  />
</span>
`;

exports[`renders ./components/input/demo/search-input.md correctly 1`] = `
<div>
  <span
    class="ant-input-search ant-input-affix-wrapper"
    style="width:200px"
  >
    <input
      class="ant-input"
      placeholder="input search text"
      type="text"
      value=""
    />
    <span
      class="ant-input-suffix"
    >
      <i
        aria-label="icon: search"
        class="anticon anticon-search ant-input-search-icon"
        tabindex="-1"
      >
        <svg
          aria-hidden="true"
          class=""
          fill="currentColor"
          focusable="false"
          height="1em"
          width="1em"
        >
          <use
            href="#search"
          />
        </svg>
      </i>
    </span>
  </span>
  <br />
  <br />
  <span
    class="ant-input-search ant-input-search-enter-button ant-input-group-wrapper"
  >
    <span
      class="ant-input-wrapper ant-input-group"
    >
      <input
        class="ant-input"
        placeholder="input search text"
        type="text"
        value=""
      />
      <span
        class="ant-input-group-addon"
      >
        <button
          class="ant-btn ant-input-search-button ant-btn-primary"
          type="button"
        >
          <i
            aria-label="icon: search"
            class="anticon anticon-search"
          >
            <svg
              aria-hidden="true"
              class=""
              fill="currentColor"
              focusable="false"
              height="1em"
              width="1em"
            >
              <use
                href="#search"
              />
            </svg>
          </i>
        </button>
      </span>
    </span>
  </span>
  <br />
  <br />
  <span
    class="ant-input-search ant-input-search-enter-button ant-input-search-large ant-input-group-wrapper ant-input-group-wrapper-lg"
  >
    <span
      class="ant-input-wrapper ant-input-group"
    >
      <input
        class="ant-input ant-input-lg"
        placeholder="input search text"
        type="text"
        value=""
      />
      <span
        class="ant-input-group-addon"
      >
        <button
          class="ant-btn ant-input-search-button ant-btn-primary ant-btn-lg"
          type="button"
        >
          <span>
            Search
          </span>
        </button>
      </span>
    </span>
  </span>
</div>
`;

exports[`renders ./components/input/demo/size.md correctly 1`] = `
<div
  class="example-input"
>
  <input
    class="ant-input ant-input-lg"
    placeholder="large size"
    type="text"
    value=""
  />
  <input
    class="ant-input"
    placeholder="default size"
    type="text"
    value=""
  />
  <input
    class="ant-input ant-input-sm"
    placeholder="small size"
    type="text"
    value=""
  />
</div>
`;

exports[`renders ./components/input/demo/textarea.md correctly 1`] = `
<textarea
  class="ant-input"
  rows="4"
/>
`;

exports[`renders ./components/input/demo/textarea-resize.md correctly 1`] = `
<div>
  <button
    class="ant-btn"
    type="button"
  >
    <span>
      Auto Resize: 
    </span>
    <span>
      false
    </span>
  </button>
  <textarea
    class="ant-input"
    rows="4"
  >
    autosize 属性适用于 textarea 节点，并且只有高度会自动变化。另外 autosize 可以设定为一个对象，指定最小行数和最大行数。autosize 属性适用于 textarea 节点，并且只有高度会自动变化。另外 autosize 可以设定为一个对象，指定最小行数和最大行数。autosize 属性适用于 textarea 节点，并且只有高度会自动变化。另外 autosize 可以设定为一个对象，指定最小行数和最大行数。autosize 属性适用于 textarea 节点，并且只有高度会自动变化。另外 autosize 可以设定为一个对象，指定最小行数和最大行数。autosize 属性适用于 textarea 节点，并且只有高度会自动变化。另外 autosize 可以设定为一个对象，指定最小行数和最大行数。autosize 属性适用于 textarea 节点，并且只有高度会自动变化。另外 autosize 可以设定为一个对象，指定最小行数和最大行数。autosize 属性适用于 textarea 节点，并且只有高度会自动变化。另外 autosize 可以设定为一个对象，指定最小行数和最大行数。ending
  </textarea>
</div>
`;

exports[`renders ./components/input/demo/tooltip.md correctly 1`] = `
<input
  class="ant-input"
  maxlength="25"
  placeholder="Input a number"
  style="width:120px"
  type="text"
  value=""
/>
`;
